# django-psycopg-infinity

./: .env.example  .gitignore  LICENSE  README.rst  pyproject.toml  runtests.py  tox.ini
.github/workflows/: release.yml  test.yml
src/django_pg_infinity/: __init__.py
src/django_pg_infinity/backends/postgresql/: base.py
src/django_psycopg_infinity/: __init__.py  fields.py  utils.py
src/django_psycopg_infinity/backends/postgresql/: base.py
tests/: models.py  settings.py  test_fields.py  test_utils.py
